2005-11-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/install-targets.make (local-install-files):
	prepend src-dir to install targets.

	* lily/system-start-delimiter-engraver.cc
	(acknowledge_system_start_delimiter): use
	add_offset_callback(). This fixes translation of nested
	staffgroups.

	* lily/grob-closure.cc (add_offset_callback): only encaps in
	simple_closure if it's a procedure.
	
	* lily/span-bar.cc (calc_glyph_name): read glyph-name, not glyph
	from bar-line.

	* ly/engraver-init.ly (RemoveEmptyRhythmicStaffContext): add
	remove-empty where pertinent.

2005-11-12  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: added
	Cameron Horsburgh's multiple stanzas docs.  Thanks!

2005-11-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/GNUmakefile
	($(top-build-dir)/Documentation/pictures/$(outbase)/lilypond.ico):
	make picture in builddir, not srcdir.

2005-11-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.16
	
	* scripts/lilypond-book.py (main): use commands.mkarg () to quote
	shell arguments. 

2005-11-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/examples.itely (Piano templates): Minor
	modification to the Piano centered lyrics example.

2005-11-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-invoke-editor.scm (run-browser): look at
	$BROWSER.

	* Documentation/user/point-and-click.itely: simplify p&c
	instruction: don't configure firefox. Put lilypond-invoke-editor
	in front of the browser.

	* scripts/lilypond-invoke-editor.scm (run-editor): new function.
	(run-browser): new function.

	* lily/parser.yy (Lily_lexer): recognize Book

	* lily/book.cc (clone): new function

	* lily/parser.yy (book_body): allow BOOK_IDENTIFIER.

2005-11-10  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/vaticana-ligature.cc, lily/vaticana-ligature-engraver.cc:
	Maintenance bugfix: reduce number of font related warnings by
	updating naming conventions for glyph-name.
